--- a/homepage.css
+++ b/homepage.css
@@ -71,13 +71,24 @@ html {
     box-shadow: 0 1px 6px rgba(32,33,36,.28);
     align-items: center;
 }
-input[type=text]{
+input[type=search]{
     border-color: white;
     border: none;
     float: none;
     width: 500px;
     height: 30px;
+    font-size: 20px;
 }
-input[type=text]:focus {
+input[type=search]:focus {
     outline: none;
+}
+input[type=search]::-webkit-search-cancel-button{
+    position: relative;
+    -webkit-appearance: none;
+    background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAAn0lEQVR42u3UMQrDMBBEUZ9WfQqDmm22EaTyjRMHAlM5K+Y7lb0wnUZPIKHlnutOa+25Z4D++MRBX98MD1V/trSppLKHqj9TTBWKcoUqffbUcbBBEhTjBOV4ja4l4OIAZThEOV6jHO8ARXD+gPPvKMABinGOrnu6gTNUawrcQKNCAQ7QeTxORzle3+sDfjJpPCqhJh7GixZq4rHcc9l5A9qZ+WeBhgEuAAAAAElFTkSuQmCC);
+    background-size: 20px;
+    background-repeat: no-repeat;
+    width: 20px;
+    height: 20px;
+    align-items: center;
 }
