--- a/homepage.css
+++ b/homepage.css
@@ -51,13 +51,20 @@ html {
 #nav-bar li{
     margin-right: 20px;
 }
+#logo-image{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding-top: 20vh;
+}
 #main-content{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 300px;
+    height: 20vh;
 }
 #search-bar{
     display:flex;
@@ -70,6 +77,9 @@ html {
     border-color: rgba(223,225,229,0);
     box-shadow: 0 1px 6px rgba(32,33,36,.28);
     align-items: center;
+}
+#search-buttons{
+    margin-top: 20px;
 }
 input[type=search]{
     border-color: white;
@@ -108,4 +118,8 @@ input[type=submit]{
 }
 input[type=submit]:focus{
     outline-color: cornflowerblue;
+}
+#language{
+    display: flex;
+    justify-content: center;
 }
