--- a/homepage.css
+++ b/homepage.css
@@ -74,9 +74,12 @@ html {
     border-radius: 24px;
     width: 560px;
     height: 45px;
-    border-color: rgba(223,225,229,0);
-    box-shadow: 0 1px 6px rgba(32,33,36,.28);
+    border: 2px solid;
+    border-color: rgba(223,225,229,30%);
     align-items: center;
+}
+#search-bar:hover{
+    box-shadow: 0 1px 6px rgba(32,33,36,.28);
 }
 #search-buttons{
     margin-top: 20px;
@@ -122,4 +125,9 @@ input[type=submit]:focus{
 #language{
     display: flex;
     justify-content: center;
+    font-size: small;
+    margin-top: 0px;
+}
+#language a{
+    margin-left: 10px;
 }
