--- a/homepage.css
+++ b/homepage.css
@@ -51,6 +51,15 @@ html {
 #nav-bar li{
     margin-right: 20px;
 }
+#nav-bar a{
+    font-size: small;
+    text-decoration: none;
+    color:black;
+}
+#nav-bar a:hover{
+    text-decoration: underline;
+    color: blue;
+}
 #logo-image{
     display: flex;
     justify-content: center;
