--- a/homepage.css
+++ b/homepage.css
@@ -66,6 +66,7 @@ html {
     align-items: center;
     width: 100%;
     padding-top: 20vh;
+    padding-bottom: 2vh;
 }
 #main-content{
     display: flex;
@@ -139,4 +140,33 @@ input[type=submit]:focus{
 }
 #language a{
     margin-left: 10px;
+}
+#footer{
+    position: fixed;
+    bottom: 0;
+    left:0;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    color: rgba(0,0,0,.54);
+    background: #f2f2f2;
+    font-size: 14px;
+    text-align: left;
+}
+#footer div{
+    border-top: 1px solid #dadce0;
+    padding-left: 25px;
+    padding-right: 25px;
+}
+#settings {
+    display: flex;
+    justify-content: space-between;
+}
+#footer ul{
+    display: flex;
+    list-style: none;
+    padding-left: 0;
+}
+#footer li{
+    margin-right: 20px;
 }
