--- a/searchpage.css
+++ b/searchpage.css
@@ -37,6 +37,7 @@
     /* Support for IE. */
     font-feature-settings: 'liga';
 }
+/*NAVIGATION BAR SECTION*/
 .nav-bar{
     display: flex;
     flex-direction: column;
@@ -63,24 +64,41 @@
     height: 50px;
     width: 100vw;
     margin-top: 70px;
+    margin-left: 169px;
 }
+/*FIRST ROW SECTION*/
 .logo-image{
     width: 92px;
     height: 30px;
+    padding-left: 18px;
+    padding-right: 45px;
 }
 .search-bar{
     display: flex;
     flex-direction: row;
     background: white;
-    padding: 5px 8px 0 16px;
+    padding: 0;
     border-radius: 24px;
-    width: 300px;
+    width: 690px;
     height: 45px;
-    border: 2px solid;
+    border: 1px solid;
+    align-items: center;
 }
 .search-bar-end{
     margin-left: auto;
     padding: 0 30px;
+}
+input[type=search]{
+    border-color: transparent;
+    background-color: transparent;
+    color: rgba(0,0,0,87%);
+    outline: none;
+    margin: 0;
+    padding: 0;
+    padding-left: 20px;
+    width: 540px;
+    height: 35px;
+    font-size: 16px;
 }
 .apps-account{
     display: flex;
@@ -88,12 +106,16 @@
 .apps-account li{
     padding: 4px;
 }
-.search-type{
-    display: flex;
-    justify-content: flex-start;
-}
 @media screen and (max-width: 1200px) {
     .apps-account {
         display: none;
     }
+}
+/*END FIST ROW SECTION*/
+/*SECOND ROW SECTION*/
+.second-row ul{
+    display: flex;
+    justify-content: flex-start;
+    margin: 0;
+    padding: 0;
 }
