--- a/searchpage.css
+++ b/searchpage.css
@@ -61,8 +61,8 @@
 .second-row{
     display: flex;
     justify-content: flex-start;
+    align-items: center;
     height: 50px;
-    width: 100vw;
     margin-top: 70px;
     margin-left: 169px;
 }
@@ -76,13 +76,26 @@
 .search-bar{
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
     background: white;
+    margin: 0;
     padding: 0;
     border-radius: 24px;
     width: 690px;
     height: 45px;
-    border: 1px solid;
+    border: 1px solid #dfe1e5;
+    box-shadow: none;
     align-items: center;
+}
+.search-bar ul{
+    display: flex;
+    justify-content: space-around;
+    padding-right: 13px;
+    padding-left: 0px;
+    align-items: center;
+}
+.search-bar li{
+    margin-left: 15px;
 }
 .search-bar-end{
     margin-left: auto;
@@ -96,9 +109,24 @@ input[type=search]{
     margin: 0;
     padding: 0;
     padding-left: 20px;
-    width: 540px;
+    width: 590px;
     height: 35px;
     font-size: 16px;
+}
+input[type=search]::-webkit-search-cancel-button{
+    position: relative;
+    -webkit-appearance: none;
+    background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAB4AAAAeCAYAAAA7MK6iAAAAn0lEQVR42u3UMQrDMBBEUZ9WfQqDmm22EaTyjRMHAlM5K+Y7lb0wnUZPIKHlnutOa+25Z4D++MRBX98MD1V/trSppLKHqj9TTBWKcoUqffbUcbBBEhTjBOV4ja4l4OIAZThEOV6jHO8ARXD+gPPvKMABinGOrnu6gTNUawrcQKNCAQ7QeTxORzle3+sDfjJpPCqhJh7GixZq4rHcc9l5A9qZ+WeBhgEuAAAAAElFTkSuQmCC);
+    background-size: 20px;
+    background-repeat: no-repeat;
+    width: 20px;
+    height: 20px;
+    align-items: center;
+}
+.Bar{
+    border-left: 1px solid #dfe1e5;
+    height: 65%;
+    width: 1px;
 }
 .apps-account{
     display: flex;
