--- a/searchpage.css
+++ b/searchpage.css
@@ -47,6 +47,7 @@
     height: 120px;
     margin: 0;
     padding: 0;
+    border-bottom: 1px solid #ebebeb;
 }
 .nav-bar ul{
     list-style: none;
@@ -136,6 +137,9 @@ input[type=search]::-webkit-search-cancel-button{
 }
 .apps-account li{
     padding: 4px;
+}
+.apps-account i{
+    font-size: 24px;
 }
 @media screen and (max-width: 1200px) {
     .apps-account {
