--- a/searchpage.css
+++ b/searchpage.css
@@ -44,10 +44,13 @@
     flex-direction: column;
     justify-content: flex-start;
     width: 100vw;
-    height: 120px;
+    height: 130px;
     margin: 0;
+    margin-top: -10px;
     padding: 0;
     border-bottom: 1px solid #ebebeb;
+    background: #ffffff;
+    z-index: 3;
 }
 .nav-bar ul{
     list-style: none;
@@ -57,15 +60,16 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    height: 70px;
+    height: 80px;
     width: 100vw;
+    background: white;
 }
 .second-row{
     display: flex;
     justify-content: flex-start;
     align-items: center;
     align-self: start;
-    height: 50px;
+    height: 60px;
     width: 660px;
     margin-top: 70px;
     margin-left: 160px;
