--- a/searchpage.css
+++ b/searchpage.css
@@ -315,5 +315,36 @@ div.settings-tools {
 }
 .also-search#last{
     border-bottom: 1px solid #ecedef;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
+}
+/*SEARCHES RELATED TO*/
+.related-section-container h3{
+    text-align: left;
+    color: #202124;
+    font-size: 22px;
+    font-weight: normal;
+    line-height: 1.182;
+    padding-bottom: 2px;
+}
+.related-section{
+    display: flex;
+    justify-content: flex-start;
+    margin: 0%;
+}
+.related-list{
+    margin: 0 50px 30px 0;
+    padding: 0;
+    list-style: none;
+}
+.related-list li{
+    margin-top: -1px;
+    padding-bottom: 4px;
+}
+.related-list a{
+    font-size: 14px;
+    font-weight: bold;
+    line-height: 20px;
+    padding: 3px 32px 3px 0;
+    text-decoration: none;
+    color: #1a0dab;
 }
