--- a/searchpage.css
+++ b/searchpage.css
@@ -431,7 +431,10 @@ footer {
 footer ul{
     display: flex;
     list-style: none;
+    margin: 0%;
+    align-items: center;
 }
+/*First row of FOOTER*/
 .location{
     display: flex;
     flex-direction: row;
@@ -439,19 +442,35 @@ footer ul{
     border-bottom: 1px solid #dadce0;
     color: rgba(0,0,0,.54);
     padding-left: 140px;
+    align-items: center;
+    justify-content: flex-start;
+    height: 40px;
 }
 .area{
     color: #3c4043;
-}
-
-.Bar2{
     border-left: 1px solid #dadce0;
-    height: 65%;
-    width: 1px;
+    margin-left: 13px;
+    padding-left: 16px;
+    padding-right: 3px;
 }
+.dot{
+    height: 10px;
+    width: 10px;
+    background-color: #202124;
+    border-radius: 100%;
+    margin: 6px 4px 9px 0;
+    vertical-align: middle;
+    display: inline-block;
+}
+/*Second row of FOOTER*/
 .terms{
     display: flex;
     flex-direction: row;
     color: rgba(0,0,0,.54);
     padding-left: 140px;
+    align-items: center;
+    height: 40px;
+}
+.terms li{
+    padding-right: 27px;
 }
